--- a/xinxcrash/tracticketcreationwizard.ui
+++ b/xinxcrash/tracticketcreationwizard.ui
@@ -289,7 +289,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWizardPage" name="createTicket">
+  <widget class="QWizardPage" name="createTicketPage">
    <property name="title">
     <string>Creation of the ticket</string>
    </property>
@@ -299,79 +299,72 @@
    <attribute name="pageId">
     <string notr="true">4</string>
    </attribute>
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
-    <item>
-     <layout class="QFormLayout" name="formLayout_2">
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>&amp;Title of ticket :</string>
-        </property>
-        <property name="buddy">
-         <cstring>ticketEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QLineEdit" name="ticketEdit"/>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>&amp;Description of ticket :</string>
-        </property>
-        <property name="buddy">
-         <cstring>descriptionEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QPlainTextEdit" name="descriptionEdit"/>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label_6">
-        <property name="text">
-         <string>&amp;Components :</string>
-        </property>
-        <property name="buddy">
-         <cstring>componentsCombo</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QComboBox" name="componentsCombo"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_7">
-        <property name="text">
-         <string>&amp;Type :</string>
-        </property>
-        <property name="buddy">
-         <cstring>typeCombo</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="typeCombo"/>
-      </item>
-     </layout>
+   <layout class="QFormLayout" name="formLayout_2">
+    <property name="fieldGrowthPolicy">
+     <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+    </property>
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_7">
+      <property name="text">
+       <string>&amp;Type :</string>
+      </property>
+      <property name="buddy">
+       <cstring>typeCombo</cstring>
+      </property>
+     </widget>
     </item>
-    <item>
-     <widget class="QSlider" name="priporitySlider">
-      <property name="toolTip">
-       <string>Priority</string>
+    <item row="0" column="1">
+     <widget class="QComboBox" name="typeCombo"/>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>&amp;Title of ticket :</string>
       </property>
-      <property name="maximum">
-       <number>5</number>
+      <property name="buddy">
+       <cstring>titleEdit</cstring>
       </property>
-      <property name="sliderPosition">
-       <number>3</number>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="titleEdit"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>&amp;Description of ticket :</string>
       </property>
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
+      <property name="buddy">
+       <cstring>descriptionEdit</cstring>
       </property>
-      <property name="tickPosition">
-       <enum>QSlider::TicksBothSides</enum>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QPlainTextEdit" name="descriptionEdit"/>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_6">
+      <property name="text">
+       <string>&amp;Components :</string>
+      </property>
+      <property name="buddy">
+       <cstring>componentsCombo</cstring>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QComboBox" name="componentsCombo"/>
+    </item>
+    <item row="4" column="1">
+     <widget class="QComboBox" name="prioritiesCombo"/>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_13">
+      <property name="text">
+       <string>&amp;Priority :</string>
+      </property>
+      <property name="buddy">
+       <cstring>prioritiesCombo</cstring>
       </property>
      </widget>
     </item>
@@ -392,7 +385,11 @@
      <widget class="QListWidget" name="attachementList"/>
     </item>
     <item row="1" column="0">
-     <widget class="DirectoryEditWidget" name="attachFile" native="true"/>
+     <widget class="DirectoryEditWidget" name="attachFile" native="true">
+      <property name="focusPolicy">
+       <enum>Qt::StrongFocus</enum>
+      </property>
+     </widget>
     </item>
     <item row="1" column="1">
      <widget class="QPushButton" name="addButton">
@@ -474,6 +471,9 @@
       <property name="wordWrap">
        <bool>true</bool>
       </property>
+      <property name="openExternalLinks">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
    </layout>
@@ -487,6 +487,25 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>loginEdit</tabstop>
+  <tabstop>passwordEdit</tabstop>
+  <tabstop>loginRadio</tabstop>
+  <tabstop>createAccountRadio</tabstop>
+  <tabstop>newLoginEdit</tabstop>
+  <tabstop>newPasswordEdit</tabstop>
+  <tabstop>newPassword2Ediit</tabstop>
+  <tabstop>newNameEdit</tabstop>
+  <tabstop>newEmailEdit</tabstop>
+  <tabstop>titleEdit</tabstop>
+  <tabstop>descriptionEdit</tabstop>
+  <tabstop>componentsCombo</tabstop>
+  <tabstop>prioritiesCombo</tabstop>
+  <tabstop>typeCombo</tabstop>
+  <tabstop>attachFile</tabstop>
+  <tabstop>addButton</tabstop>
+  <tabstop>attachementList</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
