--- a/xinxcrash/tracticketcreationwizard.ui
+++ b/xinxcrash/tracticketcreationwizard.ui
@@ -303,7 +303,7 @@
     <property name="fieldGrowthPolicy">
      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
     </property>
-    <item row="0" column="0">
+    <item row="1" column="0">
      <widget class="QLabel" name="label_7">
       <property name="text">
        <string>&amp;Type :</string>
@@ -313,10 +313,10 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
+    <item row="1" column="1">
      <widget class="QComboBox" name="typeCombo"/>
     </item>
-    <item row="1" column="0">
+    <item row="2" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>&amp;Title of ticket :</string>
@@ -326,10 +326,10 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
+    <item row="2" column="1">
      <widget class="QLineEdit" name="titleEdit"/>
     </item>
-    <item row="2" column="0">
+    <item row="3" column="0">
      <widget class="QLabel" name="label_5">
       <property name="text">
        <string>&amp;Description of ticket :</string>
@@ -339,10 +339,10 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
+    <item row="3" column="1">
      <widget class="QPlainTextEdit" name="descriptionEdit"/>
     </item>
-    <item row="3" column="0">
+    <item row="4" column="0">
      <widget class="QLabel" name="label_6">
       <property name="text">
        <string>&amp;Components :</string>
@@ -352,19 +352,33 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
+    <item row="4" column="1">
      <widget class="QComboBox" name="componentsCombo"/>
     </item>
-    <item row="4" column="1">
+    <item row="5" column="1">
      <widget class="QComboBox" name="prioritiesCombo"/>
     </item>
-    <item row="4" column="0">
+    <item row="5" column="0">
      <widget class="QLabel" name="label_13">
       <property name="text">
        <string>&amp;Priority :</string>
       </property>
       <property name="buddy">
        <cstring>prioritiesCombo</cstring>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_14">
+      <property name="text">
+       <string>Version :</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QLabel" name="versionLabel">
+      <property name="text">
+       <string/>
       </property>
      </widget>
     </item>
