--- a/framework/application/customdialog/ui/customgeneral.ui
+++ b/framework/application/customdialog/ui/customgeneral.ui
@@ -108,7 +108,7 @@
   <customwidget>
    <class>DirectoryEditWidget</class>
    <extends>QWidget</extends>
-   <header>directoryedit.h</header>
+   <header>directoryeditwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
