--- a/framework/application/customdialog/ui/customproject.ui
+++ b/framework/application/customdialog/ui/customproject.ui
@@ -158,7 +158,7 @@
   <customwidget>
    <class>DirectoryEditWidget</class>
    <extends>QWidget</extends>
-   <header>directoryedit.h</header>
+   <header>directoryeditwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
