--- a/plugins/generix/projectproperty/wizard/newgenerixinformationpage.ui
+++ b/plugins/generix/projectproperty/wizard/newgenerixinformationpage.ui
@@ -145,7 +145,7 @@
   <customwidget>
    <class>DirectoryEditWidget</class>
    <extends>QWidget</extends>
-   <header location="global">directoryedit.h</header>
+   <header location="global">directoryeditwidget.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
