--- a/plugins/generix/savedialog/derivationdialog.ui
+++ b/plugins/generix/savedialog/derivationdialog.ui
@@ -105,7 +105,7 @@
   <customwidget>
    <class>DirectoryEditWidget</class>
    <extends>QWidget</extends>
-   <header location="global">directoryedit.h</header>
+   <header location="global">directoryeditwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
