--- a/xinxcrash/tracticketcreationwizard.ui
+++ b/xinxcrash/tracticketcreationwizard.ui
@@ -520,7 +520,7 @@
   <customwidget>
    <class>DirectoryEditWidget</class>
    <extends>QWidget</extends>
-   <header location="global">directoryedit.h</header>
+   <header location="global">directoryeditwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
