--- a/framework/project/projectproperty.ui
+++ b/framework/project/projectproperty.ui
@@ -78,7 +78,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>Project &amp;Directory :</string>
+          <string>Project Directory :</string>
          </property>
         </widget>
        </item>
@@ -132,10 +132,80 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="m_directoryPage">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>&amp;Link to directory :</string>
+         </property>
+         <property name="buddy">
+          <cstring>linkedDirectoryList</cstring>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="XinxDirectoryListWidget" name="linkedDirectoryList" native="true">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::StrongFocus</enum>
+         </property>
+         <property name="defaultVisible" stdset="0">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>&amp;Exclude path (use regular expression) :</string>
+         </property>
+         <property name="buddy">
+          <cstring>excludeRegexpPath</cstring>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="XinxListWidgetImpl" name="excludeRegexpPath" native="true">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::StrongFocus</enum>
+         </property>
+         <property name="defaultVisible" stdset="0">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>XinxListWidgetImpl</class>
+   <extends>QWidget</extends>
+   <header location="global">xinxlistwidgetimpl.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>XinxDirectoryListWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">xinxdirectorylistwidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>m_buttonBox</tabstop>
   <tabstop>m_pages</tabstop>
