[EVO] Add link to folder

--- a/xinx/application.qrc
+++ b/xinx/application.qrc
@@ -51,6 +51,7 @@
         <file>images/filesaveas.png</file>
         <file>images/find.png</file>
         <file>images/flatlist.png</file>
+        <file>images/folder-bookmark.png</file>
         <file>images/folder.png</file>
         <file>images/fontsizedown.png</file>
         <file>images/fontsizeup.png</file>
