--- a/plugins/core/docks/datastream/xmlpresentationwidget.ui
+++ b/plugins/core/docks/datastream/xmlpresentationwidget.ui
@@ -90,7 +90,7 @@ If &lt;i&gt;None&lt;/i&gt; is selected only matched elements is showed.</string>
     </widget>
    </item>
    <item row="3" column="0" colspan="5">
-    <widget class="QTreeView" name="m_presentationTreeView">
+    <widget class="XmlPresentationTreeView" name="m_presentationTreeView">
      <property name="dragEnabled">
       <bool>true</bool>
      </property>
@@ -114,7 +114,7 @@ You can open a file of the list, or a file in another directory.</string>
       <number>0</number>
      </property>
      <property name="value">
-      <number>11072</number>
+      <number>163412</number>
      </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -128,6 +128,11 @@ You can open a file of the list, or a file in another directory.</string>
    <class>XinxLineEdit</class>
    <extends>QLineEdit</extends>
    <header location="global">xinxlineedit.h</header>
+  </customwidget>
+  <customwidget>
+   <class>XmlPresentationTreeView</class>
+   <extends>QTreeView</extends>
+   <header>docks/datastream/xmlpresentationtreeview.h</header>
   </customwidget>
  </customwidgets>
  <resources>
