--- a/plugins/core/docks/datastream/xmlpresentationwidget.ui
+++ b/plugins/core/docks/datastream/xmlpresentationwidget.ui
@@ -20,41 +20,30 @@
    <property name="spacing">
     <number>0</number>
    </property>
+   <item row="3" column="0" colspan="5">
+    <widget class="XmlPresentationTreeView" name="m_presentationTreeView">
+     <property name="dragEnabled">
+      <bool>true</bool>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectItems</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" colspan="5">
+    <widget class="QProgressBar" name="m_presentationProgressBar">
+     <property name="maximum">
+      <number>0</number>
+     </property>
+     <property name="value">
+      <number>163412</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0">
-    <widget class="QToolButton" name="m_refreshToolButton">
-     <property name="toolTip">
-      <string>Refresh</string>
-     </property>
-     <property name="whatsThis">
-      <string>Refresh the list of files present in the &lt;i&gt;log&lt;/i&gt; directory.</string>
-     </property>
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../../xinx/application.qrc">
-       <normaloff>:/images/reload.png</normaloff>:/images/reload.png</iconset>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="4">
-    <widget class="QToolButton" name="m_evaluateToolButton">
-     <property name="toolTip">
-      <string>Run X-Query</string>
-     </property>
-     <property name="whatsThis">
-      <string>Click on this button to open &lt;i&gt;X-Query&lt;/i&gt; dialog and query the XML document.</string>
-     </property>
-     <property name="text">
-      <string>Evaluate</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../plugindefinition/coreplugin.qrc">
-       <normaloff>:/images/run.png</normaloff>:/images/run.png</iconset>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="5">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>&amp;Filtre :</string>
@@ -64,14 +53,14 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="3">
+   <item row="0" column="1">
     <widget class="XinxLineEdit" name="m_filtreLineEdit">
      <property name="whatsThis">
       <string>Filter to use in the view. &lt;b&gt;XINX&lt;/b&gt; searches the node where the name matches the filter (literal or regular expression).</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="3" colspan="2">
+   <item row="0" column="2">
     <widget class="QComboBox" name="m_filterComboBox">
      <property name="whatsThis">
       <string>If &lt;i&gt;Sub-element&lt;/i&gt; is selected when an element is found, all sub-elements are showed. &lt;br/&gt;
@@ -89,38 +78,6 @@ If &lt;i&gt;None&lt;/i&gt; is selected only matched elements is showed.</string>
      </item>
     </widget>
    </item>
-   <item row="3" column="0" colspan="5">
-    <widget class="XmlPresentationTreeView" name="m_presentationTreeView">
-     <property name="dragEnabled">
-      <bool>true</bool>
-     </property>
-     <property name="selectionBehavior">
-      <enum>QAbstractItemView::SelectItems</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1" colspan="3">
-    <widget class="QComboBox" name="m_presentationComboBox">
-     <property name="whatsThis">
-      <string>List of file in the &lt;i&gt;log&lt;/i&gt; directory. If you select a file, the view is updated with the content of the file. &lt;br/&gt;
-
-You can open a file of the list, or a file in another directory.</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0" colspan="5">
-    <widget class="QProgressBar" name="m_presentationProgressBar">
-     <property name="maximum">
-      <number>0</number>
-     </property>
-     <property name="value">
-      <number>163412</number>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
   </layout>
  </widget>
  <customwidgets>
@@ -135,9 +92,6 @@ You can open a file of the list, or a file in another directory.</string>
    <header>docks/datastream/xmlpresentationtreeview.h</header>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../../plugindefinition/coreplugin.qrc"/>
-  <include location="../../../../xinx/application.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
