--- a/plugins/core/pluginproperty/parserprojectproperty.ui
+++ b/plugins/core/pluginproperty/parserprojectproperty.ui
@@ -15,23 +15,6 @@
   </property>
   <layout class="QFormLayout" name="formLayout">
    <item row="0" column="0">
-    <widget class="QLabel" name="m_labelDataStream">
-     <property name="text">
-      <string>Location of the &amp;data stream (parsed by the stylesheet) :</string>
-     </property>
-     <property name="buddy">
-      <cstring>m_dataStreamEdit</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="DirectoryEditWidget" name="m_dataStreamEdit" native="true">
-     <property name="focusPolicy">
-      <enum>Qt::StrongFocus</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Directory used to find CSS, JS and Image files :</string>
@@ -41,8 +24,14 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="0" column="1">
     <widget class="DirectoryEditWidget" name="m_urlLocationEdit" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="focusPolicy">
       <enum>Qt::StrongFocus</enum>
      </property>
