--- a/framework/application/customdialog/ui/customgeneral.ui
+++ b/framework/application/customdialog/ui/customgeneral.ui
@@ -30,24 +30,6 @@
       <string>&lt;p&gt;Langue in which &lt;b&gt;XINX&lt;/b&gt; must be used.&lt;/p&gt;
 &lt;p&gt;&lt;i&gt;Modification take effect at restart.&lt;/i&gt;&lt;/p&gt;</string>
      </property>
-     <item>
-      <property name="text">
-       <string>(en) English</string>
-      </property>
-      <property name="icon">
-       <iconset>
-        <normaloff>:/images/usa.png</normaloff>:/images/usa.png</iconset>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>(fr_FR) French</string>
-      </property>
-      <property name="icon">
-       <iconset>
-        <normaloff>:/images/france.png</normaloff>:/images/france.png</iconset>
-      </property>
-     </item>
     </widget>
    </item>
    <item row="1" column="0">
@@ -112,9 +94,6 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../../../components/xinxpluginselector.qrc"/>
-  <include location="../../application.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
